--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 services:
 
+  mysql:
+    image: mysql
+    build:
+      context: .
+      dockerfile: ./docker/mysql/Dockerfile
+    #ports:
+    #  - "3306:3306"
+    networks:
+      - internal
+
   nginx:
     build:
       context:  .
