--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/mysql/Dockerfile
-    #ports:
-    #  - "3306:3306"
+    ports:
+      - "3306:3306"
     networks:
       - internal
 
